--- a/demo/topjui/themes/default/topjui.red.css
+++ b/demo/topjui/themes/default/topjui.red.css
@@ -1,5 +1,4 @@
-﻿/*easyui mian*/
-#west {border:solid 1px;background:#2c3b41;}
+﻿#west {border:solid 1px;background:#2c3b41;}
 .layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border-color: #1e282c;background:#1e282c;color:#777; line-height:25px;;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#1e282c,endColorstr=#1e282c,GradientType=0)}
 .layout-panel-west .panel-header .panel-title{padding-left:20px;height:30px;color:#b8c7ce;line-height:30px;}
 .label-mes{position:absolute;top:3px;display:none;margin-left:13px;padding:2px 3px;border-radius:3px;text-align:center;font-size:9px;line-height:.9;}
@@ -20,7 +19,7 @@
 #west .accordion{border:0px;background: #222d32;}
 #west .accordion-body {border:0px;background:#2c3b41;}
 #west .accordion .accordion-header{height: 30px;border-top:solid 1px #2c3b41;border-left:3px #222d32 solid;background: #222d32;color:#fff;line-height: 30px;}
-#west .accordion .accordion-header-selected{border-left:3px #dd4b39 solid;background: #222d32;border-bottom:solid 1px #2c3b41;}
+#west .accordion .accordion-header-selected{border-left:3px #dd4b39 solid;background: #222d32;}
 #west .accordion .accordion-header:hover{border-left:3px #dd4b39 solid;background: #1e282c;color: #fff;}
 #west .accordion .accordion-header-selected .panel-title{color:#fff;}
 #west .accordion .accordion-header .panel-title:hover{color: #fff;}
