调整头部菜单

--- a/demo/topjui/themes/default/topjui.red.css
+++ b/demo/topjui/themes/default/topjui.red.css
@@ -76,7 +76,7 @@ background: url('../../themes/default/images/accordion_arrows2.png') no-repeat 0
 .switchbutton-on{background:#eb5f4e;color:#fff;}
 .switchbutton-off{background:#E1E1E1;color:#000;}
 /*顶部菜单*/
-.bannerMenu{padding:8px 12px 10px 12px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
+.bannerMenu{padding:8px 12px 10px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
 .bannerMenu lable{font-size:17px;}
 .bannerMenu span{font-size:13px;font-family:'Microsoft YaHei',Arial,Verdana;letter-spacing:1px}
 #north .topmenu{border-right:1px #d73925 solid;background:#dd4b39;text-align:center}
