优化树形表格

--- a/demo/topjui/themes/default/topjui.base.css
+++ b/demo/topjui/themes/default/topjui.base.css
@@ -2599,6 +2599,7 @@
   display: inline-block;
   text-decoration: none;
   vertical-align: top;
+  margin-top: 5px;
   white-space: nowrap;
   padding: 0 2px;
   height: 18px;
