--- a/demo/topjui/css/topjui.style.css
+++ b/demo/topjui/css/topjui.style.css
@@ -26,25 +26,125 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     line-height: 35px !important;
 }
 
-.tree-folder {background:url('');line-height:20px;font:normal normal normal 14px/1 FontAwesome;font-size:small;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-.tree-folder:before{content:"\f07b"}
-.tree-folder-open {background:url('');font:normal normal normal 14px/1 FontAwesome;font-size:small;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-.tree-folder-open:before{content:"\f07c"}
-.tree-file { background:url('');line-height:20px;font:normal normal normal 14px/1 FontAwesome;font-size:small;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-.tree-file:before{content:"\f0f6"}
-.tree-collapsed {background:url(''); margin-right:0; display:inline-block;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
-.tree-collapsed:before{content:"\f0da";font-size:medium;}
-.tree-expanded {background:url(''); margin-right:0; display:inline-block;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
-.tree-expanded:before{content:"\f0d7";font-size:medium;}
-.tree-icon{height:35px;line-height:35px !important;}
-.tree-hit{height:35px;line-height:35px !important;}
-.tree-node{padding-left:20px;height: 20px;line-height:20px;}
-.tree-title{ padding-left:4px;color:#444;line-height: 20px;}
-.tree-file{overflow:auto;background: url('');vertical-align: middle;}
-.tree-folder, .tree-folder-open{background: url('');line-height: 19px;}
-.tree-node-selected{background: #e7eaec;color:#444;}
-.tree-node-hover{background: #e7eaec;color: #000000;}
-.tree-node-hover .tree-title{color: #000000;}
+.tree-folder {
+    background: url('');
+    line-height: 20px;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: small;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+
+.tree-folder:before {
+    content: "\f07b"
+}
+
+.tree-folder-open {
+    background: url('');
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: small;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+
+.tree-folder-open:before {
+    content: "\f07c"
+}
+
+.tree-file {
+    background: url('');
+    line-height: 20px;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: small;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+
+.tree-file:before {
+    content: "\f0f6"
+}
+
+.tree-collapsed {
+    background: url('');
+    margin-right: 0;
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.tree-collapsed:before {
+    content: "\f0da";
+    font-size: medium;
+}
+
+.tree-expanded {
+    background: url('');
+    margin-right: 0;
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.tree-expanded:before {
+    content: "\f0d7";
+    font-size: medium;
+}
+
+.tree-icon {
+    height: 35px;
+    line-height: 35px !important;
+}
+
+.tree-hit {
+    height: 35px;
+    line-height: 35px !important;
+}
+
+.tree-node {
+    padding-left: 20px;
+    height: 20px;
+    line-height: 20px;
+}
+
+.tree-title {
+    padding-left: 4px;
+    color: #444;
+    line-height: 20px;
+}
+
+.tree-file {
+    overflow: auto;
+    background: url('');
+    vertical-align: middle;
+}
+
+.tree-folder, .tree-folder-open {
+    background: url('');
+    line-height: 19px;
+}
+
+.tree-node-selected {
+    background: #e7eaec;
+    color: #444;
+}
+
+.tree-node-hover {
+    background: #e7eaec;
+    color: #000000;
+}
+
+.tree-node-hover .tree-title {
+    color: #000000;
+}
 
 /* 表格行高 */
 .datagrid-row {
@@ -605,6 +705,31 @@ table.gridtable .bold {
     margin: 10px 0 20px;
 }
 
+.topjui-btn-primary {
+    background-color: #fff;
+    color: #555;
+}
+
+.topjui-btn {
+    background-color: #009688;
+    color: #fff;
+}
+
+.topjui-btn-normal {
+    background-color: #1E9FFF;
+    color: #fff;
+}
+
+.topjui-btn-warm {
+    background-color: #FFB800;
+    color: #fff;
+}
+
+.topjui-btn-danger {
+    background-color: #FF5722;
+    color: #fff;
+}
+
 /*--------------------加载start--------------------*/
 .loading-wrap {
     position: fixed;
@@ -613,8 +738,8 @@ table.gridtable .bold {
     bottom: 0;
     left: 0;
     background: #fff;
-    opacity:0.6;
-    filter:Alpha(opacity=60); /* IE8 以及更早的浏览器 */
+    opacity: 0.6;
+    filter: Alpha(opacity=60); /* IE8 以及更早的浏览器 */
     z-index: 9999;
 }
 
@@ -688,28 +813,26 @@ table.gridtable .bold {
         transform: rotate(360deg);
     }
 }
+
 /*--------------------加载end--------------------*/
 
 /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
-::-webkit-scrollbar
-{
+::-webkit-scrollbar {
     width: 10px;
     height: 10px;
     background-color: #F5F5F5;
 }
 
 /*定义滚动条轨道 内阴影+圆角*/
-::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 2px;
     background-color: #F5F5F5;
 }
 
 /*定义滑块 内阴影+圆角*/
-::-webkit-scrollbar-thumb
-{
+::-webkit-scrollbar-thumb {
     border-radius: 2px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
     background-color: #555;
 }
